# sup

./: .gitignore  Makefile  README.md  go.mod  pyproject.toml
app/: main.py
k8s/: k8s.py
styles/: sup.css
sup/: __main__.py  main.py
sup/app/: __init__.py  app.py
sup/k8s/: k8s.py
sup/screens/: run_details.py
sup/styles/: sup.css
sup/templates/: resumption_detail.md  stage_detail.md
sup/widgets/: run_list.py  run_panel.py
widgets/: run_list.py
