[tool.poetry]
name = "sup"
version = "0.3.0"
homepage = "https://github.com/atmandhol/sup"
description = "Interactive CLI for Supplychains"
authors = ["Atman Dhol <atmandhol@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "^29.0.0"
textual = "^0.58.0"
rich = "^13.7.1"
emoji = "^2.11.1"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
textual-dev = "^1.5.1"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sup = "sup.app.app:run"